# deepagents-video-maker

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml
docs/: github-project.md
docs/design/: 2026-04-25-customizable-workflow-architecture.md  2026-04-25-deepagents-native-video-maker-implementation.md  2026-04-26-deepagents-skills-research-script.md  deepagents-skill-video-maker-rosy-balloon.md  langchain-doc-research-video-maker-skil-zippy-owl.md  research.md
docs/plans/: README.md
harness/: FUTURE_TASKS.md  GITHUB_ISSUES.md  README.md  video-maker-minimal.toml  video-maker.toml
scripts/: deepagents_video_maker.py  run-harness.ps1  smoke_invoke.py  smoke_skills_research_script.py  start-agent.ps1  start-ui.ps1  video_to_golden.py
skills/feature-pipeline/: SKILL.md  baseline-report.md  linear-integration.md  scheme-c-schedule.md
skills/video-maker/: SKILL.md
src/deepagents_video_maker/: __init__.py  agent.py  artifacts.py  controller.py  langchain_tools.py  models.py  params.py  prompts.py  ratify.py  research_flow.py  script_flow.py  serialization.py  session.py  state_store.py  tools.py  training_data.py
tests/deepagents_video_maker/: conftest.py  test_agent_factory.py  test_artifact_gates.py  test_controller.py  test_langchain_tools.py  test_params.py  test_prompts.py  test_ratify_research.py  (+8 more)
web-ui/: langgraph.json  next.config.ts  package.json
(+80 files in other folders)
